ux-ui(round-6): board-browse-and-search PASS - 9 functional bug + FullText NATURAL LANGUAGE + 모바일 단축 라벨
- F-BUG-5: PostSearchService FullText query+"*" → NATURAL LANGUAGE MODE (한글 임의 위치 매칭)
- F-BUG-5: WRITER 4글자 prefix → Containing (라운드 5 멤버 검색 결정 일관)
- F-BUG-5: FTS 임계 3→2 + 0건 폴백 LIKE %%, Pageable.sort 존중 (B-009 패턴)
- F-BUG-1: queryKeys.post.search(query,type,page) 시그니처 정정 (type race 해소)
- F-BUG-2: SSR/CSR pageSize 일치 (size=20)
- F-BUG-3: URL ?page= 동기화 (router.replace + history.replaceState)
- F-BUG-4/6: type 자동 재검색 + Suspense boundary
- F-BUG-7: 모바일 input scrollIntoView
- F-BUG-8/9: 검색 모드 NoticeList 숨김 + placeholderData 깜빡임
- iter-2: webkit search cancel 숨김 + break-keep + BoardTabs 모바일 단축 라벨
- E2E 72/72 PASS × 2 iter, backend unit 8/8 + integration 10/10 통과